Renamed files and added required comments

--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,13 @@
 <!DOCTYPE html>
+<!--
+    Name: Matthew Burden
+    Date: 11/01/2025
+    CSC 372-01
+
+    This is the main index page for the Jokebook web application. It features a search bar,
+    buttons for categories, random jokes, and creating a joke, as well as displaying the
+    jokes.
+-->
 <html lang="en">
 
 <head>
